# razer-sdk-reader-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/razer_sdk_reader_bench/: main.rs
src/: appdata.rs  chroma_mutex.rs  color_provider.rs  common.rs  constants.rs  encryption.rs  keyboard.rs  lib.rs  main.rs  reader.rs  signaled_reader.rs  utils.rs
