[package]
name = "razer-sdk-reader-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "razer_sdk_reader_lib"

[[bin]]
name = "razer_sdk_reader_gui"
path = "src/bin/main.rs"

[dependencies]
eframe = "0.26.2"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory_NonVolatile",
]

[profile.ci]
inherits = "release"
lto = true
codegen-units = 1
