[package]
name = "razer-sdk-reader-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "razer_sdk_reader_lib"

[[bin]]
name = "razer_sdk_reader_gui"
path = "src/bin/main.rs"

[[bench]]
name = "razer_sdk_reader_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
eframe = "0.28.1"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory_NonVolatile",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
